quasar added for poc

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.4",
     "node-sass": "^4.13.1",
+    "quasar": "^1.0.0",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
@@ -17,6 +19,11 @@
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "babel-plugin-transform-imports": "1.5.0",
+    "node-sass": "^4.13.0",
+    "postcss-rtl": "^1.2.3",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-quasar": "~2.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
